manifests/landing-page/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page
  namespace: landing-page
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Landing Page"
    gethomepage.dev/icon: "nginx.png"
    gethomepage.dev/description: "Website"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/weight: "40"
    gethomepage.dev/pod-selector: "app=landing-page"
spec:
  ingressClassName: traefik
  rules:
    - host: www.elmstreet79.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing-page
                port:
                  number: 80
